[TASK] obsolete files removed. License adde to composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-"name": "dwenzel/bkk-template",
-"type": "typo3-cms-extension",
+  "name": "dwenzel/bkk-template",
+  "type": "typo3-cms-extension",
+  "license": "GPL-2.0-or-later"
   "description": "Template provider extension for bolschewistischekurkapelle.org base od Georg Ringers Modern Template extension.",
-"authors": [
+  "authors": [
     {
       "name": "Dirk Wenzel",
       "email": "der-wenzel@gmx.de"
